添加图片搜索栏

--- a/templates/product_display_app/product_display/product_display.html
+++ b/templates/product_display_app/product_display/product_display.html
@@ -47,6 +47,25 @@
                     <span>商品展示</span>
                 </div>
             </div>
+            <!--搜索图片的参数栏-->
+            <div class="para">
+                <form action="#">
+                    <label>
+                        国际码 &nbsp;<input type="text" name="gjm" placeholder="请输入国际码">
+                    </label>
+
+                    <label>
+                        商品条码 &nbsp;<input type="text" name="sptm" placeholder="请输入商品条码">
+                    </label>
+
+                    <label>
+                        父条码 &nbsp;<input type="text" name="ftm" placeholder="请输入父条码">
+                    </label>
+
+                    <input type="submit" value="查询">
+                </form>
+            </div>
+            
 <!--            商品展示页面-->
             <div class="product-display">
 <!--                左侧图片区域-->
