--- a/static/css/product_display/product_display.css
+++ b/static/css/product_display/product_display.css
@@ -189,6 +189,63 @@ ul.nbf span {
 
 }
 
+/*参数区域的div*/
+.right-page>.para {
+    width: 100%;
+    height: 48px;
+    background-color: white;
+    border-bottom: 2px solid rgb(233,237,242);
+
+    position: fixed;
+    top: 48px;
+
+    z-index: 99;
+
+}
+
+/*搜索图片的 para 区域*/
+.para>form {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+
+    display: flex;
+    align-items: center;
+}
+
+.para>form>label {
+    margin-left: 30px;
+    font-weight: bold;
+    font-size: 15px;
+
+    font-family: "微软雅黑",sans-serif;
+}
+
+.para>form>label>input {
+    width: 230px;
+    height: 24px;
+    border: 1px solid #c5cddb;
+    line-height: 24px;
+    border-radius: 3px;
+    font-size: 15px;
+
+    outline: none;
+}
+
+.para>form>input {
+    width: 56px;
+    height: 24px;
+    margin-left: 30px;
+    background-color: rgb(24,28,56);
+    border: 1px solid #c5cddb;
+    border-radius: 2px;
+    color: white;
+
+    cursor: pointer;
+
+    outline: none;
+}
+
 /*右侧展示区域的图片展示区域*/
 .right-page>.product-display>.product-images {
     width: 900px;
