--- a/templates/login_app/login/login.html
+++ b/templates/login_app/login/login.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <div class="container">
+        <div class="title-logo">
+            <img src="/static/assets/images/login_logo.png" alt="">
+        </div>
+        
         <div class="pane">
             <ul class="tabs">
                 <li class="current">登录</li>
