--- a/static/css/login/login.css
+++ b/static/css/login/login.css
@@ -7,6 +7,19 @@
   background-size: contain;
   position: relative;
 }
+.container .title-logo {
+  width: 500px;
+  height: 100px;
+  background-color: transparent;
+  position: absolute;
+  top: 50%;
+  left: 300px;
+  transform: translateY(-100%);
+}
+.container .title-logo img {
+  width: 100%;
+  height: 100%;
+}
 .container .pane {
   width: 440px;
   height: 506px;
