--- a/static/css/login/login.less
+++ b/static/css/login/login.less
@@ -10,6 +10,23 @@
 
   position: relative;
 
+  .title-logo {
+    width: 500px;
+    height: 100px;
+    background-color: transparent;
+
+    position: absolute;
+    top: 50%;
+    left: 300px;
+
+    transform: translateY(-100%);
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .pane {
     width: 440px;
     height: 506px;
