--- a/templates/product_display_app/product_display/product_display.html
+++ b/templates/product_display_app/product_display/product_display.html
@@ -12,7 +12,7 @@
         <div class="left-nav-bar">
 <!--            左侧导航栏标题-->
             <div class="title">
-                    <img src="/static/assets/src-icon/商品资料库logo.png" alt="" class="font-pic">
+                    <img src="/static/assets/src-icon/title_logo.png" alt="" class="font-pic">
             </div>
 <!--            左侧导航栏ul列表-->
             <div>
@@ -32,7 +32,7 @@
                     </li>
 
                     <li class="back-mg">
-                        <img src="/static/assets/src-icon/后台管理.png" alt="" class="user_mg">
+                        <img src="/static/assets/src-icon/back_manage_logo.png" alt="" class="user_mg">
                         <span>后台管理</span>
                     </li>
                 </ul>
@@ -49,7 +49,7 @@
             </div>
             <!--搜索图片的参数栏-->
             <div class="para">
-                <form action="#">
+                <form action="{% url 'product_display:index' %}">
                     <label>
                         国际码 &nbsp;<input type="text" name="gjm" placeholder="请输入国际码">
                     </label>
@@ -70,49 +70,32 @@
             <div class="product-display">
 <!--                左侧图片区域-->
                 <div class="product-images">
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/0.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/1.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/2.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/3.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/4.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/5.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/6.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/7.jpg" alt="">
-                    </div>
-                    <div class="image-index">
-                        <img src="/static/assets/src-images/8.jpg" alt="">
-                    </div>
+                    {% if get_para == 0 %}
+                        {% for image in images_path %}
+                            <div class="image-index">
+                                <img src="{{ image }}" alt="">
+                            </div>
+                        {% endfor %}
+                    {% elif get_para == 1 %}
+                        {% for image in images_path %}
+                            <div class="image-index">
+                                <img src="{{image}}" alt="">
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
 <!--                商品展示页面的右侧商品简介区域-->
                 <div class="product-intro">
                     <div class="intro-inner">
-                        <div class="name">中号皮革手袋</div>
-                        <div class="barcode">商品条码: 80888888_C20601</div>
-                        <div class="group_sn">国际码: 80888888</div>
-                        <div class="brand_alias">品牌别名: Burberry</div>
-                        <div class="dept_name">大类: 包</div>
-                        <div class="big_category">中类: 大包</div>
-                        <div class="small_category">小类: 单肩包</div>
-                        <div class="col">颜色: 棕色</div>
-                        <div class="size">尺寸: 中号</div>
-                        <div class="season">季节: 四季</div>
-                        <div class="gender">性别: 女</div>
-                        <div class="market_price">市场价: 8888</div>
+                        {% if get_para == 0 %}
+                            {% for k,v in info.items %}
+                                <div class={{ k }}>{{ v.0 }} {{ v.1 }}</div>
+                            {% endfor %}
+                        {% elif get_para == 1 %}
+                            {% for k,v in info.items %}
+                                <div class={{ k }}>{{ v.0 }} {{ v.1 }}</div>
+                            {% endfor %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
