--- a/templates/user_management_app/user_management/user_management.html
+++ b/templates/user_management_app/user_management/user_management.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>06-用户管理页面</title>
+    <title>用户管理页面</title>
     <link rel="stylesheet" href="../../../static/css/user_management/user_management.css">
 
 </head>
@@ -23,7 +23,7 @@
 
 
                     <li class="display">
-                        <a href="{% url 'product_display:index' %}">
+                        <a href="{% url 'product_display:func_display' %}">
                             <div>
                                 <img src="/static/assets/images/product_display.png" alt="" class="user_mg">
                                 <span>商品展示</span>
