--- a/templates/product_display_app/product_display/product_display.html
+++ b/templates/product_display_app/product_display/product_display.html
@@ -81,7 +81,9 @@
                     {% elif get_para == 1 %}
                         {% for image in images_path %}
                             <div class="image-index">
-                                <img src="{% static image %}" alt="">
+                                <a href="{% url 'product_display:image_display' image.0 image.1 %}">
+                                    <img src="{% static image.2 %}" alt="">
+                                </a>
                             </div>
                         {% endfor %}
                     {% endif %}
