--- a/static/css/BaseCss/base_css.less
+++ b/static/css/BaseCss/base_css.less
@@ -1,2 +1,21 @@
 @import "Normalize.css";
 @import "//at.alicdn.com/t/c/font_4614181_4n7ullhjj3y.css";
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+ul,p,dl,dd {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h5 {
+  margin: 0;
+}
